environments/staging/deployments/echo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app
  namespace: echo-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - echo.stg.ithut.net
    secretName: echo-app-tls
  rules:
  - host: echo.stg.ithut.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-app
            port:
              number: 80
